Translate sensor for rate limit remaing day
    * custom_components/daikin_onecta/const.py:
    * custom_components/daikin_onecta/sensor.py:
    * custom_components/daikin_onecta/translations/de.json:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/nl.json:
    * tests/snapshots/test_init.ambr:

--- a/custom_components/daikin_onecta/translations/de.json
+++ b/custom_components/daikin_onecta/translations/de.json
@@ -55,6 +55,9 @@
       }
     },
     "sensor": {
+      "ratelimitremainingday": {
+        "name": "Verbleibende für Tag"
+      },
       "coolingdailyelectricalconsumption": {
         "name": "Täglicher Stromverbrauch Kühlung"
       },
