--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -55,6 +55,9 @@
       }
     },
     "sensor": {
+      "ratelimitremainingday": {
+        "name": "Ratelimit remaining day"
+      },
       "coolingdailyelectricalconsumption": {
         "name": "Cooling daily electrical consumption"
       },
