--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -55,6 +55,9 @@
       }
     },
     "sensor": {
+      "ratelimitremainingday": {
+        "name": "Resterend per dag"
+      },
       "coolingdailyelectricalconsumption": {
         "name": "Dagelijks elektriciteitsverbruik koelen"
       },
