Config flow updates
    * custom_components/daikin_onecta/translations/bg.json:
    * custom_components/daikin_onecta/translations/de.json:
    * custom_components/daikin_onecta/translations/el.json:
    * custom_components/daikin_onecta/translations/en.json:
    * custom_components/daikin_onecta/translations/fi.json:
    * custom_components/daikin_onecta/translations/nb.json:
    * custom_components/daikin_onecta/translations/nl.json:
    * custom_components/daikin_onecta/translations/nn.json:
    * custom_components/daikin_onecta/translations/no.json:
    * custom_components/daikin_onecta/translations/sk.json:
    * custom_components/daikin_onecta/translations/sl.json:

--- a/custom_components/daikin_onecta/translations/bg.json
+++ b/custom_components/daikin_onecta/translations/bg.json
@@ -18,8 +18,7 @@
     "abort": {
       "already_configured": "Интеграцията вече е конфигурирана.",
       "cannot_connect": "Неуспешно свързване с Daikin Cloud.",
-      "init_failed": "Неуспешна инициализация на Daikin API.",
-      "token_retrieval_failed": "Неуспешно извличане на набор от токени за достъп."
+      "init_failed": "Неуспешна инициализация на Daikin API."
     },
     "error": {
       "cannot_connect": "Неуспешно свързване",
