--- a/custom_components/daikin_onecta/translations/en.json
+++ b/custom_components/daikin_onecta/translations/en.json
@@ -19,7 +19,7 @@
       "already_configured": "The integration is already configured.",
       "cannot_connect": "Failed to connect to Daikin Cloud.",
       "init_failed": "Failed to initialize Daikin API.",
-      "token_retrieval_failed": "Failed to retrieve access token set."
+      "wrong_account": "Please ensure you reconfigure against the same account."
     },
     "error": {
       "cannot_connect": "Failed to connect",
