--- a/custom_components/daikin_onecta/translations/nl.json
+++ b/custom_components/daikin_onecta/translations/nl.json
@@ -97,16 +97,16 @@
         "name": "IP‑adres"
       },
       "tanktemperature": {
-        "name": "Tanktemperatuur"
+        "name": "Tank temperatuur"
       },
       "heatupmode": {
         "name": "Opwarmmodus"
       },
       "outdoortemperature": {
-        "name": "Buitentemperatuur"
+        "name": "Buiten temperatuur"
       },
       "leavingwatertemperature": {
-        "name": "Vertrekkende watertemperatuur"
+        "name": "Vertrekkende water temperatuur"
       },
       "errorcode": {
         "name": "Foutcode"
@@ -118,7 +118,7 @@
         "name": "Powerful‑modus"
       },
       "roomtemperature": {
-        "name": "Ruimtetemperatuur"
+        "name": "Ruimte temperatuur"
       },
       "onoffmode": {
         "name": "Aan/uit‑modus"
@@ -157,13 +157,13 @@
         "name": "Vertrekkende water‑offset"
       },
       "calculatedleavingwatertemperature": {
-        "name": "Berekende vertrekkende watertemperatuur"
+        "name": "Berekende vertrekkende water temperatuur"
       },
       "heatexchangertemperature": {
-        "name": "Warmtewisselaartemperatuur"
+        "name": "Warmtewisselaar temperatuur"
       },
       "suctiontemperature": {
-        "name": "Aanzuigtemperatuur"
+        "name": "Aanzuig temperatuur"
       },
       "deltad": {
         "name": "DeltaD"
@@ -172,7 +172,7 @@
         "name": "Dry‑keep‑instelling"
       },
       "fanmotorrotationspeed": {
-        "name": "Rotatiesnelheid ventilatormotor"
+        "name": "Rotatiesnelheid ventilator motor"
       },
       "datetime": {
         "name": "Datum/tijd"
